# ZoKrates

./: .gitignore  Cargo.toml
zokrates_abi/src/: abi_gen.rs  lib.rs
zokrates_cli/: Cargo.toml
zokrates_cli/src/: bin.rs
zokrates_core/: Cargo.toml
zokrates_core/lib/: gm17.cpp  pghr13.cpp
zokrates_core/src/: compile.rs
zokrates_core/src/flat_absy/: mod.rs
zokrates_core/src/flatten/: mod.rs
zokrates_core/src/ir/: folder.rs  from_flat.rs  interpreter.rs  mod.rs
zokrates_core/src/optimizer/: redefinition.rs
zokrates_core/src/proof_system/: mod.rs
zokrates_core/src/proof_system/bn128/: g16.rs
zokrates_core/src/proof_system/bn128/utils/: libsnark.rs
zokrates_core/src/static_analysis/: flat_propagation.rs  mod.rs  propagation.rs  statement_logger.rs  unconstrained_vars.rs
zokrates_core/src/typed_absy/: abi.rs  folder.rs  mod.rs  types.rs
zokrates_ext_resolver/: Cargo.toml
zokrates_ext_resolver/src/: lib.rs
zokrates_fs_resolver/src/: lib.rs
zokrates_resolvers/: Cargo.toml
zokrates_resolvers/src/: lib.rs
zokrates_resolvers/src/resolvers/: fs.rs  mod.rs  url.rs
zokrates_test/: Cargo.toml
zokrates_test/src/: lib.rs
