[package]
name = "zokrates_ext_resolver"
version = "0.1.0"
authors = ["dark64 <darem966@gmail.com>"]
edition = "2018"

[dependencies]
cfg-if = "0.1"
reqwest = { version = "0.10.2", features = ["blocking"] }
regex = "1.3.4"
lazy_static = "1.4.0"
zokrates_core = { version = "0.4.2", path = "../zokrates_core" }
