[package]
name = "zokrates_resolvers"
version = "0.1.0"
authors = ["dark64 <darem966@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zokrates_core = { version = "0.4.2", path = "../zokrates_core" }
reqwest = { version = "0.10.2", features = ["blocking"] }
regex = "1.3.4"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3"